--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,6 +9,6 @@ services:
       - "50000:50000" # Jenkins JNLP agents
     volumes:
       - ../jenkins_home:/var/jenkins_home # Jenkins data 저장
-      - D:/PROJECT/web:/home/jenkins/web
+      - D:/PROJECT/web:/var/jenkins_home/web
       - /var/run/docker.sock:/var/run/docker.sock # Docker 실행을 위해 Docker socket 공유
     restart: always
